# stm32f469-disco-blinky

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
